--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html ng-app="app">
 <head lang="en">
     <meta charset="UTF-8">
-    <base href="/">
     <title>dev-test1</title>
-    <link href="include/styles.css" rel="stylesheet"/>
-    <script src="include/scripts.min.js" type="text/javascript"></script>
+    <link href="styles.css" rel="stylesheet"/>
+    <script src="scripts.js" type="text/javascript"></script>
 </head>
 <body ng-controller="mainCtrl">
 <div class="mainBody">
