--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body ng-controller="mainCtrl">
 <div class="mainBody">
-    <div ng-view class="partial slowIn"></div>
+    Name: <input type="text" ng-model="filter" ng-change="onFilterChange()">
+    <p>
+        {{names.length}}
+    </p>
 </div>
 </body>
 </html>
