--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <div class="mainBody">
     Name: <input type="text" ng-model="filter" ng-change="onFilterChange()">
     <br/>
-    <div ng-repeat="a in names">
-        <user-info name="a.name" email="a.email"></user-info>
+    <div class="user-list">
+        <ul>
+            <li ng-repeat="a in names">
+                <user-info name="a.name" email="a.email"></user-info>
+            </li>
+        </ul>
     </div>
 </div>
 </body>
