--- a/index.html
+++ b/index.html
@@ -7,16 +7,45 @@
     <script src="scripts.js" type="text/javascript"></script>
 </head>
 <body ng-controller="mainCtrl">
+
+<div class="main-header">
+    <div class="top-panel">
+        this is top panel
+    </div>
+    <div class="search-panel">
+        this is just some search panel
+    </div>
+</div>
+
+<div class="btn-group" uib-dropdown is-open="menuStatus.open">
+    <button id="single-button" type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
+        <span class="glyphicon glyphicon-list"></span> Funny Menu Button <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+        <li role="menuitem"><a href="#">Which</a></li>
+        <li role="menuitem"><a href="#">Does</a></li>
+        <li role="menuitem"><a href="#">Exactly</a></li>
+        <li class="divider"></li>
+        <li role="menuitem"><a href="#">Zilch</a></li>
+    </ul>
+</div>
+
 <div class="mainBody">
     Name: <input type="text" ng-model="filter" ng-change="onFilterChange()">
     <br/>
+
+    <a ng-href="mailto:{{getEmails()}}" ng-disabled="!getEmails().length" class="btn btn-primary"><span
+            class="glyphicon glyphicon-send"></span>
+        Email selected members</a>
+    <br>
     <div class="user-list">
         <ul>
             <li ng-repeat="a in names">
-                <user-info name="a.name" email="a.email"></user-info>
+                <user-info name="a.name" email="a.email" checked="a.checked"></user-info>
             </li>
         </ul>
     </div>
+
 </div>
 </body>
 </html>
